syntax = "proto3";

package Service;
option go_package="./";

service Auction {
  rpc Bid(bid) returns (ack) {}
  rpc Result(empty) returns (sync) {}
  rpc Sync(sync) returns (ack) {}
  rpc IsLeader(empty) returns (ack) {}
  rpc ReturnConnection(ID) returns (ack) {}
  rpc CallElection(ID) returns (ack) {}
  rpc GetID(empty) returns (ID) {}
}

message ack {
  bool valid = 1;
  int32 returnCode = 2;
}

message bid {
  string ID = 1;
  int32 amount = 2;
}

message sync {
  int32 highestBid = 1;
  string highestBidder = 2;
  int32 timeRemaining = 3;
  bool sold = 4;
  bool isLeader = 5;
}

message empty{
}

message ID {
  int32 ID = 1;
}
